# DEDUKT

./: CMakeLists.txt  README  README.md  install.sh  list_tmp.txt  list_tmp1.txt  makeVersionFile.cmake.in  notes  seqan_default.config  version.h.in
align/: Aligner.cpp  Aligner.h  CMakeLists.txt  Makefile_compr_test  align.h  edlib_interface.h  main.cpp  read_compression.cpp  read_compression.h  seqan_interface.h  test_compression.cpp
cmake/Modules/: BuildSettings.cmake  MacroUtilities.cmake  Macros.cmake  Options.cmake  Packages.cmake  ProjectSettings.cmake
common/: Buffer.c  Buffer.h  CMakeLists.txt  FileOpenerMPI.cpp  FileOpenerMPI.h  MPIUtils.h  ReadIdToProcId.cpp  ReadIdToProcId.h  StaticVars.h  VectorMap.hpp  colors.h  common.h  common_rankpath.h  defines.h  file.h  hash_funcs.c  log.h  mach.h  memory_chk.c  mpi_common.h  optlist.c  optlist.h  readid_records.h  stdlib_compatibility.hpp
dataset/: tmp1.fastq  tmp2.fastq  tmp3.fastq
fqreader/: CMakeLists.txt  fq_reader.c  fq_reader.cpp  fq_reader.h
kmercount/: CMakeLists.txt  EfficientCount.h  Friends.h  FriendsMPI.h  HeavyHittersBenchmark.cpp  KC_GPU.cu  KC_GPU.h  Kmer.cpp  Kmer.hpp  MPIFileBuffer.c  MPIFileBuffer.h  MPIType.h  Pack.h  ParallelFASTQ.h  README  SNPFunctions.h  SNPidentify.cpp  SP_KC.cpp  SP_KC.h  SP_KC_GPU.cu  SimpleCount.h  bin2textCount.cpp  bin2textUFX.cpp  bmfltr_GPU.cu  check_hugepages.c  common.h  common_gpu.h  edison.submit.human  khash.hh  kmerhashtable.h  kmermatch.cpp  kmermatch.cu  kmermatch.h  kmrCnt_GPU.cu  linearprobing.cu  linearprobing.h  log  makefile  readufx.cpp  readufx.h  (+12 more)
kmercount/DataStructures/: hyperloglog.hpp
loadfq/: CMakeLists.txt  loadfq.c  loadfq.cpp  loadfq.h  unloadfq.c
main/: CMakeLists.txt  config.c  config.h  exec_utils.c  exec_utils.h  main.cpp
readoverlap/: CMakeLists.txt  ReadOverlapper.cpp  ReadOverlapper.h  main.cpp  overlap.h
scripts/: compareToBella.py  olcf-ecoli30x.sh  qsub_scaling.sh  qsub_single.sh  run_dibella.pbs  run_dibella.slurm  sbatch_scaling.sh  sbatch_single.sh  shift_overlaps.py  submit_32node_smer_mini7.lsf  tag.py
scripts/install-environments/: cori-env.sh  cori-meta-env.sh  denovo-env.sh  edison-env.sh  mac-env.sh  summitgpu-env.sh  titan-env.sh
scripts/job-output-parsing/: alignment-parser.py  pipeline_parser.py  ufxoverlap-parser.py
